--- a/my-profile.html
+++ b/my-profile.html
@@ -48,34 +48,39 @@
   </nav>
   <main>
     <div class="container">
+      <div id="alert"></div>
       <div class="profile-container">
-          <img src="https://via.placeholder.com/150" alt="Imagen de usuario" class="profile-image">
+        <div class="photo" style="text-align: center;">
+          <img id="profileImage" src="https://via.placeholder.com/150" alt="Imagen de usuario" class="profile-image">
+          <label for="fileInput">Agregar foto de perfil:</label>
+          <input type="file" id="fileInput" accept="image/*" style="display: none;">
+        </div>
           
           <div class="form-container">
             <form id="profileForm">
               <div class="form-group">
                   <label for="username">Nombre de usuario:</label>
-                  <input type="text" id="username" class="form-control">
+                  <input type="text" id="username" class="form-control" value="" readonly>
               </div>
               <div class="form-group">
                   <label for="second-name">Segundo nombre:</label>
-                  <input type="text" id="second-name" class="form-control">
+                  <input type="text" id="second-name" class="form-control" value="" >
               </div>
               <div class="form-group">
-                  <label for="lastname">Apellido:</label>
-                  <input type="text" id="lastname" class="form-control">
+                  <label for="lastname">*Apellido:</label>
+                  <input type="text" id="lastname" class="form-control" value="" required>
               </div>
               <div class="form-group">
                   <label for="second-lastname">Segundo apellido:</label>
-                  <input type="text" id="second-lastname" class="form-control">
+                  <input type="text" id="second-lastname" class="form-control" value="">
               </div>
               <div class="form-group">
-                  <label for="email">Email:</label>
-                  <input type="email" id="email" class="form-control">
+                  <label for="email">*Email:</label>
+                  <input type="email" id="email" class="form-control" value="" required>
               </div>
               <div class="form-group">
                   <label for="phone">Teléfono de contacto:</label>
-                  <input type="tel" id="phone" class="form-control">
+                  <input type="tel" id="phone" class="form-control" value="">
               </div>
               <div class="switch-container">
                 <span class="switch-label">Modo Día <i class="bi bi-brightness-high-fill"></i></span>
