--- a/my-profile.html
+++ b/my-profile.html
@@ -47,7 +47,9 @@
     </div>
   </nav>
   <main>
-    <div class="container">
+    <div class="container" id="profilePage">
+      <div class="row"> 
+      <div class="col-md-4 col-12"> 
       <div id="alert"></div>
       <div class="profile-container">
         <div class="photo" id="contenedorFotoPerfil">
@@ -57,8 +59,9 @@
           <input type="file" id="fileInput" accept="image/*" style="display: none;">
           </div>
         </div>
-          
-          <div class="form-container">
+      </div>
+      </div>
+          <div class="form-container col-md-8 col-12">
             <form id="profileForm">
               <div class="form-group">
                   <label for="username">Nombre de usuario:</label>
@@ -96,6 +99,7 @@
               </form>
           </div>
       </div>
+    </div>
   </div>
   </main>
   <footer class="text-muted">
