--- a/cart.html
+++ b/cart.html
@@ -46,8 +46,26 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="row" id="contenedor-carrito">
+        <div class="col-md-4">
+          <h4>Mi carrito</h4>
+          <div class="d-flex justify-content-center mb-3">
+            <img src="img/carrito.png" alt="Imagen de carrito" class="img-fluid" style="max-width: 100%; max-height: 150px;"> 
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Resumen de compra</h5>
+              <p class="card-text">Cantidad de artículos:</p>
+              <p id="cantidad-articulos"></p>
+              <p>Total:</p>
+              <p id="total-compra"></p>
+              <a href="#" class="btn btn-primary">Finalizar compra</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-8" id="contenedor-productos-carrito">
+
+        </div>
       </div>
     </div>
   </main>
