--- a/my-profile.html
+++ b/my-profile.html
@@ -36,7 +36,7 @@
               <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="dropdown-menu-button"><i class="bi bi-person-fill"></i>
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+                <li><a class="dropdown-item" href="cart.html">Mi carrito <span class="badge bg-warning text-dark rounded-pill" id="badge-carrito"></span></a></li>
                 <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
                 <li><a class="dropdown-item" href="login.html" id="cerrar-sesion">Cerrar sesion</a></li>
               </ul>
