--- a/cart.html
+++ b/cart.html
@@ -59,16 +59,103 @@
               <p id="cantidad-articulos"></p>
               <p>Total:</p>
               <p id="total-compra"></p>
-              <a href="#" class="btn btn-primary">Finalizar compra</a>
-            </div>
+              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalFinalizarCompra">Finalizar compra</button>            </div>
           </div>
         </div>
-        <div class="col-md-8" id="contenedor-productos-carrito">
+          <!-- Aquí se mostrarán los productos del carrito -->
+      <div class="col-md-8" id="contenedor-productos-carrito">
 
         </div>
       </div>
     </div>
   </main>
+
+   <!-- Modal para finalizar compra -->
+   <div class="modal fade" id="modalFinalizarCompra" tabindex="-1" aria-labelledby="modalFinalizarCompraLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalFinalizarCompraLabel">Finalizar compra</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!-- Pestañas para organizar la información -->
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link active" id="envio-tab" data-bs-toggle="tab" href="#envio" role="tab" aria-controls="envio" aria-selected="true">Tipo de Envío</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="direccion-tab" data-bs-toggle="tab" href="#direccion" role="tab" aria-controls="direccion" aria-selected="false">Dirección</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pago-tab" data-bs-toggle="tab" href="#pago" role="tab" aria-controls="pago" aria-selected="false">Forma de Pago</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="costos-tab" data-bs-toggle="tab" href="#costos" role="tab" aria-controls="costos" aria-selected="false">Costos</a>
+            </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <!-- Tipo de Envío -->
+            <div class="tab-pane fade show active" id="envio" role="tabpanel" aria-labelledby="envio-tab">
+              <div class="form-group mt-3">
+                <label for="tipo-envio">Selecciona el tipo de envío:</label>
+                <select class="form-select" id="tipo-envio">
+                  <option value="15">Premium 2 a 5 días (15%)</option>
+                  <option value="7">Express 5 a 8 días (7%)</option>
+                  <option value="5">Standard 12 a 15 días (5%)</option>
+                </select>
+              </div>
+            </div>
+            <!-- Dirección de Envío -->
+            <div class="tab-pane fade" id="direccion" role="tabpanel" aria-labelledby="direccion-tab">
+              <div class="form-group mt-3">
+                <label for="departamento">Departamento:</label>
+                <input type="text" class="form-control" id="departamento" placeholder="Departamento">
+              </div>
+              <div class="form-group mt-3">
+                <label for="localidad">Localidad:</label>
+                <input type="text" class="form-control" id="localidad" placeholder="Localidad">
+              </div>
+              <div class="form-group mt-3">
+                <label for="calle">Calle:</label>
+                <input type="text" class="form-control" id="calle" placeholder="Calle">
+              </div>
+              <div class="form-group mt-3">
+                <label for="numero">Número:</label>
+                <input type="text" class="form-control" id="numero" placeholder="Número">
+              </div>
+              <div class="form-group mt-3">
+                <label for="esquina">Esquina:</label>
+                <input type="text" class="form-control" id="esquina" placeholder="Esquina">
+              </div>
+            </div>
+            <!-- Forma de Pago -->
+            <div class="tab-pane fade" id="pago" role="tabpanel" aria-labelledby="pago-tab">
+              <div class="form-group mt-3">
+                <label for="forma-pago">Selecciona forma de pago:</label>
+                <select class="form-select" id="forma-pago">
+                  <option value="tarjeta">Tarjeta de crédito</option>
+                  <option value="transferencia">Transferencia bancaria</option>
+                </select>
+              </div>
+            </div>
+            <!-- Costos -->
+            <div class="tab-pane fade" id="costos" role="tabpanel" aria-labelledby="costos-tab">
+              <h5>Resumen de costos</h5>
+              <p>Subtotal: <span id="subtotal-costo"></span></p>
+              <p>Costo de envío: <span id="costo-envio"></span></p>
+              <p>Total: <span id="total-costo"></span></p>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary">Confirmar compra</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
