--- a/cart.html
+++ b/cart.html
@@ -67,7 +67,9 @@
               <p>Subtotal: <span id="total-compra"></span></p>
               <p>Costo de envío: <span id="costo-envio"></span></p>
               <p>Total: <span id="total-compra-envio"></span></p>
-              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalFinalizarCompra">Finalizar compra</button>            </div>
+              <a href="#" id="pago-direccion" data-bs-toggle="modal" data-bs-target="#modalDireccionPago">Añadir dirección y forma de pago</a>
+              <button class="btn btn-primary" id="finalizar-compra" data-bs-toggle="modal" data-bs-target="#modalDireccionPago">Finalizar compra</button>            
+            </div>
           </div>
         </div>
           <!-- Aquí se mostrarán los productos del carrito -->
@@ -78,12 +80,12 @@
     </div>
   </main>
 
-   <!-- Modal para finalizar compra -->
-   <div class="modal fade" id="modalFinalizarCompra" tabindex="-1" aria-labelledby="modalFinalizarCompraLabel" aria-hidden="true">
+   <!-- Modal para dirección y forma de pago -->
+   <div class="modal fade" id="modalDireccionPago" tabindex="-1" aria-labelledby="modalDireccionPagoLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modalFinalizarCompraLabel">Finalizar compra</h5>
+          <h5 class="modal-title" id="modalDireccionPagoLabel">Dirección y forma de pago</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -123,18 +125,45 @@
             <!-- Forma de Pago -->
             <div class="tab-pane fade" id="pago" role="tabpanel" aria-labelledby="pago-tab">
               <div class="form-group mt-3">
-                <label for="forma-pago">Selecciona forma de pago:</label>
                 <select class="form-select" id="forma-pago">
-                  <option value="tarjeta">Tarjeta de crédito</option>
+                  <option selected disabled>Seleccionar forma de pago</option>
+                  <option value="tarjeta">Tarjeta de crédito o débito</option>
                   <option value="transferencia">Transferencia bancaria</option>
                 </select>
+                <br>
+                <form id="formulario-tarjeta" style="display: none;">
+                  <div class="form-group mt-3">
+                    <label for="numero-tarjeta" class="form-label">Número:</label>
+                    <input type="text" id="numero-tarjeta" name="numero-tarjeta" class="form-control">
+                  </div>
+                  <div class="form-group mt-3">
+                    <label for="fecha-tarjeta" class="form-label">Fecha de vencimiento:</label>
+                    <input type="date" id="fecha-tarjeta" name="fecha-tarjeta" class="form-control">
+                  </div>
+                  <div class="form-group mt-3">
+                    <label for="codigo-tarjeta" class="form-label">Código de seguridad:</label>
+                    <input type="text" id="codigo-tarjeta" name="codigo-tarjeta" class="form-control">
+                  </div>
+                  <div class="form-group mt-3">
+                    <label for="nombre-tarjeta" class="form-label">Nombre:</label>
+                    <input type="text" id="nombre-tarjeta" name="nombre-tarjeta" class="form-control"> 
+                  </div>
+                  <div class="form-group mt-3">
+                    <label for="apellido-tarjeta" class="form-label">Apellido:</label>
+                    <input type="text" id="apellido-tarjeta" name="apellido-tarjeta" class="form-control">
+                  </div>
+                </form>
+                <div style="display: none;" id="transferencia">
+                  <p>Realizar transferencia a caja de ahorro Itaú 7832323</p>
+                  <p>Enviar comprobante de transferencia a emercado@jap.com.uy</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary">Confirmar compra</button>
+          <button type="button" class="btn btn-primary">Guardar Datos</button>
         </div>
       </div>
     </div>
